fix overflow on hero

--- a/src/components/pages/home/HomePage.scss
+++ b/src/components/pages/home/HomePage.scss
@@ -3,10 +3,12 @@
 
 .top-block {
   position: relative;
+  overflow: hidden;
 
-  .about-container {
+  @include desktop {
+    overflow: visible;
 
-    @include desktop {
+    .about-container {
       position: relative;
       height: 100%;
       display: flex;
